tests/unit/default/syntax-error/134-add-fk-child-to.x.t
---- IN ----
+FK%child(foo,bar)=>|
---- OUT ----
---- ERR ----
syntax: expected <table> after `...foo,bar)=>` near `|` at position 20 - at line 1
---- EXIT ----
1
